# sentry-contrib-rust

./: .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: rust-ci.yml
breakpad-handler/: Cargo.toml  README.md
breakpad-handler/examples/: handle_crash.rs
breakpad-handler/src/: alloc.rs  error.rs  lib.rs  linux.rs  minidump.rs  page_allocator.rs  utils.rs
breakpad-handler/src/alloc/: page_allocator.rs  page_vec.rs  raw_vec.rs
breakpad-handler/src/linux/: elf.rs  file_writer.rs  handler.rs  minidump_writer.rs  ptrace_dumper.rs  thread_info.rs  ucontext.rs
breakpad-handler/src/utils/: fixed_str.rs  fs.rs  line_reader.rs  read_dir.rs
breakpad-sys/: Cargo.toml  README.md  build.rs
breakpad-sys/examples/: handle_crash.rs
breakpad-sys/src/: impl.cpp  lib.rs
src/: breakpad_integration.rs  disk_transport.rs  error.rs  lib.rs  shared.rs  transport.rs
synth-elf/: Cargo.toml
synth-elf/src/: lib.rs
synth-elf/tests/: elf.rs  notes.rs  string_table.rs  symbol_table.rs
