[package]
name = "sentry-contrib-breakpad"
description = "Unopinionated crash collection for Sentry reporting purposes"
repository = "https://github.com/EmbarkStudios/tame-sentry"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/tame-sentry"
homepage = "https://github.com/EmbarkStudios/tame-sentry"
keywords = ["breakpad", "sentry"]
exclude = [
    ".github",
    "release.toml",
    "breakpad-handler",
    "breakpad-sys",
]

[dependencies]
breakpad-handler = { version = "0.1.0", path = "./breakpad-handler" }
crossbeam = "0.8.0"
parking_lot = "0.11"
sentry-core = "0.21"

[workspace]
members = [
    "breakpad-handler",
    "breakpad-sys",
]

[patch.crates-io]
sentry-types = { path = "../sentry-rust/sentry-types" }
