[package]
name = "sentry-contrib-breakpad"
description = "Unopinionated crash collection for Sentry reporting purposes"
repository = "https://github.com/EmbarkStudios/sentry-contrib-rust"
version = "0.5.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentry-contrib-breakpad"
homepage = "https://github.com/EmbarkStudios/sentry-contrib-rust"
keywords = ["breakpad", "sentry", "minidump", "crash"]
exclude = [
    ".github",
    "release.toml",
    "breakpad-handler",
    "breakpad-sys",
]

[features]
default = []
debug-logs = []

[dependencies]
breakpad-handler = { version = "0.1.0", path = "./breakpad-handler" }
sentry-core = { version = "0.27", features = ["client"] }
serde_json = "1.0"

[workspace]
members = [
    "breakpad-handler",
    "breakpad-sys",
]
