[package]
name = "sentry-contrib-breakpad"
description = "Unopinionated crash collection for Sentry reporting purposes"
repository = "https://github.com/EmbarkStudios/sentry-contrib-rust"
version = "0.8.1"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/sentry-contrib-breakpad"
homepage = "https://github.com/EmbarkStudios/sentry-contrib-rust"
keywords = ["breakpad", "sentry", "minidump", "crash"]
exclude = [".github", "release.toml", "breakpad-handler", "breakpad-sys"]

[badges]
# We don't use this crate ourselves any longer
maintenance = { status = "passively-maintained" }

[features]
default = []
debug-logs = []

[dependencies]
breakpad-handler = { version = "0.2.0", path = "./breakpad-handler" }
sentry-core = { version = ">=0.29,<=0.31.6", features = ["client"] }
sentry-types = "=0.31.6"
serde_json = "1.0"

[workspace]
members = ["breakpad-handler", "breakpad-sys"]
