[package]
name = "breakpad-handler"
description = "Allows writing of a minidump when a crash occurs"
repository = "https://github.com/EmbarkStudios/sentry-contrib-rust"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/breakpad-handler"
homepage = "https://github.com/EmbarkStudios/sentry-contrib-rust/tree/main/breakpad-handler"
keywords = ["breakpad", "minidump", "crash"]
readme = "README.md"

[dependencies]
breakpad-sys = { version = "0.1.0", path = "../breakpad-sys" }

backtrace = "0.3"
cfg-if = "1.0"
errno = "0.2"
libc = "0.2"
memoffset = "0.6"
minidump-common = "0.9"
parking_lot = "0.11"
scroll = { version = "0.10", default-features = false }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nix = "0.23"
raw-cpuid = "10.2"

# ELF parsing
[dependencies.goblin]
version = "0.4"
default-features = false
features = ["elf32", "elf64"]

[dev-dependencies]
rstest = "0.11"
rstest_reuse = "0.1"
synth-elf = { path = "../synth-elf" }
