[package]
name = "breakpad-handler"
description = "Allows writing of a minidump when a crash occurs"
repository = "https://github.com/EmbarkStudios/sentry-contrib-rust"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/breakpad-handler"
homepage = "https://github.com/EmbarkStudios/sentry-contrib-rust/tree/main/breakpad-handler"
keywords = ["breakpad", "minidump", "crash"]
readme = "README.md"

[dependencies]
breakpad-sys = { version = "0.1.0", path = "../breakpad-sys" }
